# finance-green-agent

./: .env.example  .gitignore  Dockerfile  README.md  evaluate_purple_agent.sh  pyproject.toml  send_assessment_request.sh
.github/workflows/: test-and-publish.yml
src/: __init__.py  agent.py  config.py  dataset.py  executor.py  judge.py  mcp_server.py  messenger.py  server.py  utils.py
tests/: conftest.py  test_agent.py  test_mcp.py  test_tasks.py
